--- a/la-mia-pizzeria-static/Views/Home/UserIndex.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/UserIndex.cshtml
@@ -1,8 +1,160 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    Layout = null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Giada's Pizza</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/User.css" />
+</head>
+
+<body>
+
+    <header class="header">
+
+        <nav class="navbar navbar-expand-lg ">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Giada's Pizza</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/Home/Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Home/UserIndex">User</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    </header>
+
+
+
+    <main class="py-4">
+
+        <div class="container">
+            <div class="row g-5">
+
+                <h1 class="my-5 text-center ms_main_title">Il Nostro Menù</h1>
+
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-img">
+                                <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xlx7oZVd_khsvg4O92O6DgHaE8%26pid%3DApi&f=1&ipt=71dde818b9da4652897afd0bb26d02dc98d01f8f49cd5e1ae1a4102da2c798a8&ipo=images" alt="Immagine di una pizza" />
+                        </div>
+                        <div class="card-title">Margherita</div>
+                        <div class="card-subtitle">Pomodoro, Mozzarella, Basilico.</div>
+                        <hr class="card-divider">
+                        <div class="card-price text-center">
+                            <span>7</span> €
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xlx7oZVd_khsvg4O92O6DgHaE8%26pid%3DApi&f=1&ipt=71dde818b9da4652897afd0bb26d02dc98d01f8f49cd5e1ae1a4102da2c798a8&ipo=images" alt="Immagine di una pizza" />
+                        </div>
+                        <div class="card-title">Diavola</div>
+                        <div class="card-subtitle">Pomodoro, Mozzarella, Salame Piccante.</div>
+                        <hr class="card-divider">
+                        <div class="card-price text-center">
+                            <span>8</span> €
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xlx7oZVd_khsvg4O92O6DgHaE8%26pid%3DApi&f=1&ipt=71dde818b9da4652897afd0bb26d02dc98d01f8f49cd5e1ae1a4102da2c798a8&ipo=images" alt="Immagine di una pizza" />
+                        </div>
+                        <div class="card-title">Prosciutto e Funghi</div>
+                        <div class="card-subtitle">Pomodoro, Mozzarella, Prosciutto, Funghi.</div>
+                        <hr class="card-divider">
+                        <div class="card-price text-center">
+                            <span>10</span> €
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xlx7oZVd_khsvg4O92O6DgHaE8%26pid%3DApi&f=1&ipt=71dde818b9da4652897afd0bb26d02dc98d01f8f49cd5e1ae1a4102da2c798a8&ipo=images" alt="Immagine di una pizza" />
+                        </div>
+                        <div class="card-title">Wurstel</div>
+                        <div class="card-subtitle">Pomodoro, Mozzarella, Wurstel.</div>
+                        <hr class="card-divider">
+                        <div class="card-price text-center">
+                            <span>8</span> €
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xlx7oZVd_khsvg4O92O6DgHaE8%26pid%3DApi&f=1&ipt=71dde818b9da4652897afd0bb26d02dc98d01f8f49cd5e1ae1a4102da2c798a8&ipo=images" alt="Immagine di una pizza" />
+                        </div>
+                        <div class="card-title">Rucola e Grana</div>
+                        <div class="card-subtitle">Pomodoro, Mozzarella,Rucola, Grana.</div>
+                        <hr class="card-divider">
+                        <div class="card-price text-center">
+                            <span>10</span> €
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse3.mm.bing.net%2Fth%3Fid%3DOIP.Xlx7oZVd_khsvg4O92O6DgHaE8%26pid%3DApi&f=1&ipt=71dde818b9da4652897afd0bb26d02dc98d01f8f49cd5e1ae1a4102da2c798a8&ipo=images" alt="Immagine di una pizza" />
+                        </div>
+                        <div class="card-title">Focaccia</div>
+                        <div class="card-subtitle">Olio, Origano, Sale.</div>
+                        <hr class="card-divider">
+                        <div class="card-price text-center">
+                            <span>5</span> €
+                        </div>
+                    </div>
+
+                </div>
+               
+            </div>
+        </div>
+    </main>
+
+
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3  border-top">
+        <p class="col-md-4 mb-0 text-muted">© 2023 Giada</p>
+
+        <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+            <!-- Inserire Logo Sito -->
+        </a>
+
+        <ul class="nav col-md-4 justify-content-end">
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+        </ul>
+    </footer>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+</body>
+
+</html>
