--- a/la-mia-pizzeria-static/Views/Home/UserIndex.cshtml
+++ b/la-mia-pizzeria-static/Views/Home/UserIndex.cshtml
@@ -10,6 +10,10 @@
     <title>Giada's Pizza</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/User.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,13 +29,13 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/Home/Index">Home</a>
+                            <a class="nav-link active" aria-current="page" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Home/UserIndex">User</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="UserIndex">User</a>
                         </li>
                     </ul>
                 </div>
@@ -42,13 +46,19 @@
 
 
 
-    <main class="py-4">
+    <main class="pb-5">
+
+        <div class="jumbotron d-flex align-items-center">
+            <div class="jt-logo d-flex align-items-center justify-content-center">
+                GIADA'S PIZZA
+            </div>
+        </div>
 
         <div class="container">
             <div class="row g-5">
 
-                <h1 class="my-5 text-center ms_main_title">Il Nostro Menù</h1>
-
+                <h1 class="py-5 text-center ms_main_title">Il Nostro Menù</h1>
+                <hr/>
                 <div class="col-4">
                     <div class="card">
                         <div class="card-img">
@@ -127,8 +137,8 @@
                             <span>5</span> €
                         </div>
                     </div>
-
                 </div>
+                <hr />
                
             </div>
         </div>
