--- a/la-mia-pizzeria-static/wwwroot/css/User.css
+++ b/la-mia-pizzeria-static/wwwroot/css/User.css
@@ -1,12 +1,34 @@
 ﻿body {
     background-color: #FFE1AA;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
     background-color: #FFFEEF;
     height: 100px;
     font-size: 30px;
+    position: fixed;
+    width: 100%;
+    border-bottom: 5px solid #E80000;
+    
+}
+.jumbotron {
+    max-width:100%;
+    padding:2rem;
+    height:800px;
+    background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fpng.pngtree.com%2Fback_origin_pic%2F03%2F60%2F56%2F8ea86c041222a5a9564b0bfc4fe3da97.jpg&f=1&nofb=1&ipt=67a7f09edf26420b9dbfc815c2688e3b83d607bce437b194229b7c8b61cffc34&ipo=images);
+    background-position:center;
+    background-size: cover
+}
+
+.jt-logo {
+    background-color: #ffe1aa9e;
+    width: 800px;
+    height: 300px;
+    margin: 0 auto;
+    border-radius: 5px;
+    font-size:50px;
+    font-weight:bold;
 }
 
 
@@ -28,8 +50,8 @@ footer {
     background-color: #FFC978;
     width: 350px;
     height: 450px;
-    border: 2px solid black;
-    box-shadow: 4px 4px black;
+    border: 2px solid #E80000;
+    box-shadow: 4px 4px #E80000;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -81,8 +103,8 @@ footer {
 }
 
 .card-price span {
-        font-size: 25px;
-        font-weight: 500;
+    font-size: 25px;
+    font-weight: 500;
         
 }
 
