--- a/la-mia-pizzeria-static/wwwroot/css/myStyle.css
+++ b/la-mia-pizzeria-static/wwwroot/css/myStyle.css
@@ -1,12 +1,13 @@
 ﻿body {
     background-color: #FFE1AA;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
     background-color: #FFFEEF;
-    height:100px;
+    height: 100px;
     font-size: 30px;
+    border-bottom: 5px solid #E80000;
 }
 
 
